chore: env changed for open webui
(cherry picked from commit 6aaf747409e7102b672664f36e1f0773d2cf7ed6)

--- a/compose.ollama.yaml
+++ b/compose.ollama.yaml
@@ -50,7 +50,7 @@ services:
     depends_on:
       - app
     environment:
-      - OLLAMA_API_BASE_URL=http://app:11434/api
+      - OLLAMA_BASE_URL=http://app:11434
       - http_proxy=http://proxy:8118
       - https_proxy=http://proxy:8118
       - no_proxy=localhost,127.0.0.1,app
