chore: be svelte
(cherry picked from commit ab9b4ae24e72cfa2390845aa99b442695052a689)

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 .idea
 .vscode
 
-models
-openai
-data
-fooocus
-ollama
-gpt-sovits
+/models
+/openai
+/data
+/fooocus
+/ollama
+/gpt-sovits
 
-styles.csv
+/styles.csv
 
-certs
+/certs
