--- a/compose.1111webui.yaml
+++ b/compose.1111webui.yaml
@@ -7,6 +7,8 @@ services:
       - internal
     volumes:
       - ./tinyproxy.conf:/etc/tinyproxy/tinyproxy.conf
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
   http:
     image: "caddy"
     restart: unless-stopped
@@ -19,6 +21,8 @@ services:
       - 7860:7860
     volumes:
       - ./caddy.sdui.Caddyfile:/etc/caddy/Caddyfile
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
   app:
     image: "1111webui:v1"
     restart: unless-stopped
