--- a/compose.comfyui.yaml
+++ b/compose.comfyui.yaml
@@ -7,6 +7,8 @@ services:
       - internal
     volumes:
       - ./tinyproxy.conf:/etc/tinyproxy/tinyproxy.conf
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
   http:
     image: "caddy"
     networks:
@@ -18,6 +20,8 @@ services:
       - 7861:7860
     volumes:
       - ./caddy.sdui.Caddyfile:/etc/caddy/Caddyfile
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
   app:
     image: "comfyui:v1"
     networks:
