--- a/compose.https.yaml
+++ b/compose.https.yaml
@@ -8,3 +8,5 @@ services:
     volumes:
       - ./certs:/etc/ssl/certs
       - ./caddy.https.Caddyfile:/etc/caddy/Caddyfile
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
