--- a/compose.ollama.yaml
+++ b/compose.ollama.yaml
@@ -7,6 +7,8 @@ services:
       - internal
     volumes:
       - ./tinyproxy.conf:/etc/tinyproxy/tinyproxy.conf
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
   http:
     image: "caddy"
     networks:
@@ -20,6 +22,8 @@ services:
       - 11435:11435
     volumes:
       - ./caddy.ollama.Caddyfile:/etc/caddy/Caddyfile
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
   app:
     image: "ollama/ollama"
     networks:
