--- a/compose.ollama.yaml
+++ b/compose.ollama.yaml
@@ -57,7 +57,7 @@ services:
       - OLLAMA_BASE_URL=http://app:11434
       - http_proxy=http://proxy:8118
       - https_proxy=http://proxy:8118
-      - no_proxy=localhost,127.0.0.1,app,0.0.0.0
+      - no_proxy=localhost,127.0.0.1,0.0.0.0,app,webui,proxy,::1
     volumes:
       - ./ollama/webui:/app/backend/data:z
 
